[project]
name = "utilyx"
version = "0.1.0"
description = "A lightweight Python utility module for config loading, writing, and safe exits."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
    { name = "alonefox", email = "alonefox_1st@hotmail.com" }
]

keywords = ["utility", "config", "json", "ini", "tools"]

[project.urls]
Homepage = "https://github.com/alonefox1st-cmd/utilyx"
Repository = "https://github.com/alonefox1st-cmd/utilyx"
Issues = "https://github.com/alonefox1st-cmd/utilyx/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"