[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utilyx"
version = "1.0.1"
description = "A lightweight Python utility module for config loading, writing, and safe exits."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "alonefox", email = "alonefox_1st@hotmail.com" }]
requires-python = ">=3.8"
keywords = ["utility", "config", "json", "ini", "tools"]
dependencies = ["pyside6"]

[project.urls]
Homepage = "https://github.com/alonefox1st-cmd/utilyx"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
utilyx = ["*.ui"]
